<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#2E3139"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imvLogoItem"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/photo"
            android:src="@drawable/carita"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txvInfoRecordatorio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textMovimiento"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imvLogoItem"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txvMRepeticiones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/textRepetir"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imvLogoItem"
            app:layout_constraintTop_toBottomOf="@+id/txvInfoRecordatorio" />


        <TextView
            android:id="@+id/txvTiempoRepeticion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textTiempoRepeticion"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imvLogoItem"
            app:layout_constraintTop_toBottomOf="@+id/txvMRepeticiones" />

        <TextView
            android:id="@+id/txvMontoPagar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/costo"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txvTiempoRepeticion"
            app:layout_constraintTop_toBottomOf="@+id/txvMRepeticiones" />

        <ImageButton
            android:id="@+id/ibtEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="Create"
            android:src="@drawable/jjochico"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibtDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511" />

        <ImageButton
            android:id="@+id/ibtDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="Delete"
            android:src="@drawable/botechico"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:textSize="0dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/swtActAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtEdit" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>