<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ciudades"
    tools:context=".Detalle_Alertas">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blacknew">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="10dp"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="10dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/txvMiPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Detalle_alertas"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txvTituloNombreRecordatorio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/txvNombreAlerta"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvDetalleNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Pago del Agua"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvTituloHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/txvHorarAct"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvDetalleHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="02:00"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvTituloMonto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/txvMontoPagar"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvDetalleMonto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="$0.00"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvTituloRepeticion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/txvTiempoRepe"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txvDetalleRepeticion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Diario"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />


                </LinearLayout>
            </ScrollView>
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>